vbnc/vbnc/tests/Errors/error.vb
Option Strict On
Class A
    Shared Sub Main()
        Dim o As Integer = If(Nothing, "0")
    End Sub
End Class